--- a/index.html
+++ b/index.html
@@ -59,6 +59,37 @@
                 </div>
             </div>
         </section>
+        <section>
+            <h1>Education</h1>
+            <div class="border2">
+                <div class="school">
+                    <img src="pictures/bellbrook.png">
+                    <p>
+                        From 2018-2020 I attended Bellbrook High School and participated in the Marching band.
+                    </p>
+                </div>
+            </div>
+            <div class="border2">
+                <div class="school">
+                    <img src="pictures/gccc.png" style="transform: scale(1.1); margin-block: 26px;">
+                    <p>
+                        From 2020-2022 I am attending the Greene County Career Career Center and am in the
+                        Information Technology program. Our club chaper is <span href="https://bpa.org">BPA</span> and I competed in Website Design Team
+                        as mentioned above. I have also been trained in CompTIA A+ and Network+ and taking the cirtification exams soon. Currently
+                        I am only cirtified in <span href="https://certification.testout.com/verifycert?certificateId=6-2C6-KSQ64">Test Out Network Pro</span> and Soft Skills.
+                    </p>
+                </div>
+            </div>
+            <div class="border2">
+                <div class="school">
+                    <img  style="border-radius: 50%;" src="pictures/sinclair.png">
+                    <p>
+                        While enrolled in the Career Center I am also taking BIS 1120 (Microsoft Office),
+                        CIS 1107 (Intro to Operating Systems) and CIS 1111 (Intro to Problem Solving and Computer Programming)
+                    </p>
+                </div>
+            </div>
+        </section>
     </div>
 </body>
 </html>
