--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
-    <title>Jeremiah</title>
+    <title>Meeeeeeeeeeeee</title>
 </head>
 <body>
     <nav>
@@ -19,7 +19,8 @@
     <div class="main-content">
         <section class="head">
             <h1>Hi, I'm Jeremiah</h1>
-            <p>I am a 17 year old in High-school looking to be a full stack developer but as of now have more experience as a web dev</p>
+            <p>I am a 17 year old in High-school looking to be a software developer of some kind 
+                but as of now have more experience as a web dev</p>
         </section>
         <section>
             <h1>projects</h1>
@@ -38,7 +39,7 @@
                 <div class="border">
                     <div class="project">
                         <h1><a href="ControllingCarbon/index.html" target="_blank">Controlling Carbon</a></h1>
-                        <img src="pictures/MDMC.png">
+                        <img src="pictures/ControllingCarbon.png">
                         <p>
                             This is my second, first complete site I made for <span href="https://bpa.org">Business Professionals of America</span>
                             along with my partner that did the designing. We ended up placing first in regionals and 8th in state. Also made in plain html
