--- a/index.html
+++ b/index.html
@@ -94,37 +94,76 @@
         <section>
             <h1>Skills</h1>
             <div class="skills">
-                <li>
-                    <img title="HTML" src="pictures/html.png">
-                </li>
-                <li>
-                    <img title="CSS" src="pictures/css.png">
-                </li>
-                <li>
-                    <img title="React (Learning)" src="pictures/react.png">
-                </li>
-                <li>
-                    <img title="Node.js (Learning)" src="pictures/node.png">
-                </li>
-                <li>
-                    <img title="npm" src="pictures/npm.png">
-                </li>
-                <li>
-                    <img title="Next.js (Learning)" src="pictures/next.png">
-                </li>
-                <li>
-                    <img title="C++ (Learning)" src="pictures/cpp.png">
-                </li>
-                <li>
-                    <img title="C# (Learning)" src="pictures/cs.png">
-                </li>
-                <li>
-                    <img title="Microsoft Office Suite (ALL)" src="pictures/mss.png">
-                </li>
-                <li>
-                    <img title="Github/Git" src="pictures/github.png">
-                </li>
-                
+                <div class="border3">
+                    <div class="hexagon">
+                        <li>
+                            <img title="HTML" src="pictures/html.png">
+                        </li>
+                    </div>
+                </div>
+                <div class="border3">
+                    <div class="hexagon">
+                        <li>
+                            <img title="CSS" src="pictures/css.png">
+                        </li>
+                    </div>
+                </div>     
+                <div class="border3">
+                    <div class="hexagon">   
+                        <li>
+                            <img title="React (Learning)" src="pictures/react.png">
+                        </li>
+                    </div>   
+                </div>
+                <div class="border3">
+                    <div class="hexagon">         
+                        <li>
+                            <img title="Node.js (Learning)" src="pictures/node.png">
+                        </li>
+                    </div>   
+                </div>
+                <div class="border3">
+                    <div class="hexagon">
+                        <li>
+                            <img title="npm" src="pictures/npm.png">
+                        </li>
+                    </div>   
+                </div>
+                <div class="border3">
+                    <div class="hexagon">
+                        <li>
+                            <img title="Next.js (Learning)" src="pictures/next.png">
+                        </li>
+                    </div>   
+                </div>
+                <div class="border3">
+                    <div class="hexagon">
+                        <li>
+                            <img title="C++ (Learning)" src="pictures/cpp.png">
+                        </li>
+                    </div>   
+                </div>
+                <div class="border3">
+                    <div class="hexagon">
+                        <li>
+                            <img title="C# (Learning)" src="pictures/cs.png">
+                        </li>
+                    </div>   
+                </div>
+                <div class="border3">
+                    <div class="hexagon">
+                        <li>
+                            <img title="Microsoft Office Suite (ALL)" src="pictures/mss.png">
+                        </li>
+                    </div>   
+                </div>
+                <div class="border3">
+                    <div class="hexagon">
+                        <li>
+                            <img title="Github/Git" src="pictures/github.png">
+                        </li>
+                    </div>   
+                </div>
             </div>
         </section>
     </div>
