--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                     <p>
                         From 2020-2022 I am attending the Greene County Career Career Center and am in the
                         Information Technology program. Our club chaper is <span href="https://bpa.org">BPA</span> and I competed in Website Design Team
-                        as mentioned above. I have also been trained in CompTIA A+ and Network+ and taking the cirtification exams soon. Currently
-                        I am only cirtified in <span href="https://certification.testout.com/verifycert?certificateId=6-2C6-KSQ64">Test Out Network Pro</span> and Soft Skills.
+                        as mentioned above. Through this program I was able to earn my Comptia A+ and TestOut Network Pro certifications. I am soon to take my Network+
+                        exam and assuming I pass I will move on to Security+.
                     </p>
                 </div>
             </div>
@@ -94,7 +94,7 @@
         <section>
             <h1>Skills</h1>
             <div class="skills">
-                <div class="border3">
+                <div title="HTML" class="border3">
                     <div class="hexagon">
                         <li>
                             <img title="HTML" src="pictures/html.png">
@@ -107,25 +107,36 @@
                             <img title="CSS" src="pictures/css.png">
                         </li>
                     </div>
-                </div>     
-                <div class="border3">
-                    <div class="hexagon">   
-                        <li>
-                            <img title="React (Learning)" src="pictures/react.png">
-                        </li>
-                    </div>   
                 </div>
                 <div class="border3">
-                    <div class="hexagon">         
+                    <div class="hexagon">
                         <li>
-                            <img title="Node.js (Learning)" src="pictures/node.png">
+                            <img title="npm" src="pictures/npm.png">
                         </li>
                     </div>   
                 </div>
                 <div class="border3">
                     <div class="hexagon">
                         <li>
-                            <img title="npm" src="pictures/npm.png">
+                            <img title="Microsoft Office Suite (ALL)" src="pictures/mss.png">
+                        </li>
+                    </div>   
+                </div>
+                <div class="border3">
+                    <div class="hexagon">
+                        <li>
+                            <img title="Github/Git" src="pictures/github.png">
+                        </li>
+                    </div>   
+                </div>
+            </div>
+
+            <h1>Developing Skills</h1>
+            <div class="skills">
+                <div class="border3">
+                    <div class="hexagon">         
+                        <li>
+                            <img title="Node.js (Learning)" src="pictures/node.png">
                         </li>
                     </div>   
                 </div>
@@ -153,14 +164,7 @@
                 <div class="border3">
                     <div class="hexagon">
                         <li>
-                            <img title="Microsoft Office Suite (ALL)" src="pictures/mss.png">
-                        </li>
-                    </div>   
-                </div>
-                <div class="border3">
-                    <div class="hexagon">
-                        <li>
-                            <img title="Github/Git" src="pictures/github.png">
+                            <img title="figma" src="pictures/figma.png">
                         </li>
                     </div>   
                 </div>
