--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
         <section class="head">
             <h1>Hi, I'm Jeremiah</h1>
             <p>I am a 17 year old in High-school looking to be a software developer of some kind 
-                but as of now have more experience as a web dev</p>
+                but as of now have more experience as a web dev
+            </p>
+            <div class="border1">
+                <a class="dlbutton" href="Resume-Jeremiah-Andrews.pdf" download>Download Resume</a>
+            </div>
+
         </section>
         <section>
             <h1>projects</h1>
