--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     <div class="main-content">
         <section class="head">
             <h1>Hi, I'm Jeremiah</h1>
-            <p>I am a 17 year old in High-school looking to be a software developer of some kind 
-                but as of now have more experience as a web dev
+            <p>Recent High School Graduate with a passion for creation
             </p>
             <div class="border1">
                 <a class="dlbutton" href="Resume-Jeremiah-Andrews.pdf" download>Download Resume</a>
@@ -79,10 +78,9 @@
                 <div class="school">
                     <img src="pictures/gccc.png" style="transform: scale(1.1); margin-block: 26px;">
                     <p>
-                        From 2020-2022 I am attending the Greene County Career Career Center and am in the
+                        From 2020-2022 I attended the Greene County Career Career Center in the
                         Information Technology program. Our club chaper is <span href="https://bpa.org">BPA</span> and I competed in Website Design Team
-                        as mentioned above. Through this program I was able to earn my Comptia A+ and TestOut Network Pro certifications. I am soon to take my Network+
-                        exam and assuming I pass I will move on to Security+.
+                        as mentioned above. Through this program I was able to earn my Comptia A+ and TestOut Network Pro certifications.
                     </p>
                 </div>
             </div>
@@ -90,7 +88,7 @@
                 <div class="school">
                     <img  style="border-radius: 50%;" src="pictures/sinclair.png">
                     <p>
-                        While enrolled in the Career Center I am also taking BIS 1120 (Microsoft Office),
+                        While enrolled in the Career Center I took BIS 1120 (Microsoft Office),
                         CIS 1107 (Intro to Operating Systems) and CIS 1111 (Intro to Problem Solving and Computer Programming)
                     </p>
                 </div>
@@ -110,6 +108,20 @@
                     <div class="hexagon">
                         <li>
                             <img title="CSS" src="pictures/css.png">
+                        </li>
+                    </div>
+                </div>
+                <div title="CompTIA A+" class="border3">
+                    <div class="hexagon">
+                        <li>
+                            <img title="HTML" style="transform:scale(1.5)" src="pictures/a+.png">
+                        </li>
+                    </div>
+                </div>
+                <div title="CompTIA A+" class="border3">
+                    <div class="hexagon">
+                        <li>
+                            <img title="HTML" src="pictures/netpro.png">
                         </li>
                     </div>
                 </div>
