--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <nav>
         <h1></h1>
     </nav>
+    <p style="font-size: 12px;">This site is a bit outdated and incomplete though information is still relevent</p>
+
     <div class="main-content">
         <section class="head">
             <h1>Hi, I'm Jeremiah</h1>
@@ -24,7 +26,6 @@
             <div class="border1">
                 <a class="dlbutton" href="Resume-Jeremiah-Andrews.pdf" download>Download Resume</a>
             </div>
-
         </section>
         <section>
             <h1>projects</h1>
@@ -56,8 +57,8 @@
                         <h1>FNF Mods</h1>
                         <img src="pictures/fnf.png">
                         <p>
-                            This site im currently working on is for the popular rhythm game called Friday Night Funkin.
-                            It is a full stack site made with Next.js and the final product should allow for users to create accounts
+                            This site was working on is for the popular rhythm game called Friday Night Funkin.
+                            It was planned full stack site made with Next.js and the final product should allow for users to create accounts
                             to download and upload mods for the game. It is currently in development and will be released in the future.
                         </p>
                     </div>
